--- a/obsidian_zettel/.obsidian/workspace
+++ b/obsidian_zettel/.obsidian/workspace
@@ -9,8 +9,8 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Base/Socket Programming in Python (Guide).md",
-            "mode": "source"
+            "file": "Base/Roadmap для BackEnd разработчика.md",
+            "mode": "preview"
           }
         }
       }
@@ -60,7 +60,8 @@
       }
     ],
     "direction": "horizontal",
-    "width": 300
+    "width": 300,
+    "collapsed": true
   },
   "right": {
     "id": "c2b10c6956ca179f",
@@ -76,7 +77,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Base/Socket Programming in Python (Guide).md",
+                "file": "Base/Roadmap для BackEnd разработчика.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -104,11 +105,20 @@
             "state": {
               "type": "outline",
               "state": {
-                "file": "Base/Socket Programming in Python (Guide).md"
+                "file": "Base/Roadmap для BackEnd разработчика.md"
               }
             }
+          },
+          {
+            "id": "3865ad749d8c4ef1",
+            "type": "leaf",
+            "state": {
+              "type": "advanced-tables-toolbar",
+              "state": {}
+            }
           }
-        ]
+        ],
+        "currentTab": 3
       }
     ],
     "direction": "horizontal",
@@ -117,14 +127,15 @@
   },
   "active": "d49b9d2bffa82ae7",
   "lastOpenFiles": [
-    "Base/Socket Programming in Python (Guide).md",
-    "Base/Мой Zettelkasten.md",
-    "Base/Что такое сервер.md",
-    "Base/00 Сокет.md",
+    "Base/Roadmap для BackEnd разработчика.md",
+    "Files/backend.png",
     "Base/Untitled.md",
+    "Base/Темы заданий по ЕГЭ-Математика.md",
+    "Base/Alias в Cmder.md",
+    "Base/Мой Zettelkasten.md",
     "Base/Что такое Сокет.md",
-    "Base/Как работает сервер по протоколу CGI.md",
-    "Base/00 web-сервер.md",
-    "Templates/Untitled.md"
+    "Base/Что такое сервер.md",
+    "Base/Socket Programming in Python (Guide).md",
+    "Base/00 Сокет.md"
   ]
 }
