--- a/obsidian_zettel/.obsidian/workspace
+++ b/obsidian_zettel/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Base/Roadmap для BackEnd разработчика.md",
+            "file": "Base/Задачи по теории вероятности.md",
             "mode": "source"
           }
         }
@@ -60,8 +60,7 @@
       }
     ],
     "direction": "horizontal",
-    "width": 300,
-    "collapsed": true
+    "width": 300
   },
   "right": {
     "id": "c2b10c6956ca179f",
@@ -77,7 +76,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Base/Roadmap для BackEnd разработчика.md",
+                "file": "Base/Задачи по теории вероятности.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -105,7 +104,7 @@
             "state": {
               "type": "outline",
               "state": {
-                "file": "Base/Roadmap для BackEnd разработчика.md"
+                "file": "Base/Задачи по теории вероятности.md"
               }
             }
           },
@@ -117,25 +116,23 @@
               "state": {}
             }
           }
-        ],
-        "currentTab": 3
+        ]
       }
     ],
     "direction": "horizontal",
-    "width": 300,
-    "collapsed": true
+    "width": 100
   },
   "active": "d49b9d2bffa82ae7",
   "lastOpenFiles": [
-    "Base/Roadmap для BackEnd разработчика.md",
-    "Files/backend.png",
     "Base/Untitled.md",
+    "Base/Планеметрия.md",
     "Base/Темы заданий по ЕГЭ-Математика.md",
-    "Base/Alias в Cmder.md",
-    "Base/Мой Zettelkasten.md",
-    "Base/Что такое Сокет.md",
-    "Base/Что такое сервер.md",
-    "Base/Socket Programming in Python (Guide).md",
-    "Base/00 Сокет.md"
+    "Base/00 ЕГЭ.md",
+    "Templates/0 New note.md",
+    "Base/Инструкция как соединить Windows с GitHub по SSH.md",
+    "Base/SSH.md",
+    "Base/00 web-сервер.md",
+    "Base/первоначальная настройку git.md",
+    "Base/Как работает сервер по протоколу CGI.md"
   ]
 }
